--- a/web/index.html
+++ b/web/index.html
@@ -5,8 +5,28 @@
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <div>TODO write content</div>
+        <header>
+            <p>
+                HEADER           
+            </p> 
+        </header>
+        <nav>
+            <p>
+                NAVIGATION
+            </p>
+        </nav>
+        <main>
+            <p>
+                MAIN
+            </p>
+        </main>
+        <footer>
+            <p>
+                FOOTER
+            </p>
+        </footer>
     </body>
 </html>
