--- a/web/index.html
+++ b/web/index.html
@@ -2,16 +2,23 @@
 
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Aula de AS</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <header>
-            <p>
-                HEADER           
-            </p> 
+            <h1>Senac</h1>
+                <form action="Controle">
+                    <label for="usuario">Usuário:</label>
+                    <input id="usuario" type="text" name="usuario">
+
+                    <label for="senha">Senha:</label>
+                    <input id="senha" type="password" name="senha">
+
+                    <input type="submit" value="Entrar">
+                </form> 
         </header>
         <nav>
             <p>
