--- a/web/index.html
+++ b/web/index.html
@@ -10,7 +10,8 @@
     <body>
         <header>
             <h1>Senac</h1>
-                <form action="Controle">
+                <form method="POST" action="Controle">
+                    <input type="hidden" name="flag" value="login">
                     <label for="usuario">Usuário:</label>
                     <input id="usuario" type="text" name="usuario">
 
