--- a/web/CadastroDepartamento.html
+++ b/web/CadastroDepartamento.html
@@ -29,4 +29,5 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
                     </div>
                 </div>
             </form> 
+        </div>
 </html>
