--- a/web/ConsultarDepartamento.html
+++ b/web/ConsultarDepartamento.html
@@ -11,6 +11,7 @@
     <body>
         <div class="container">
             <form method="POST" action="Controle">
+                <input type="hidden" name="flag" value="consultarDepartamento">
                 <div class="m-1 row">
                     <div>
                     <label for="nome" class="form-label">Nome:</label>
